--- a/registration.html
+++ b/registration.html
@@ -91,7 +91,7 @@
             <h2>Register Here</h2>
 
             <form action="https://formsubmit.co/1faf3ad12fddecd6402f2d149cc3fd40" method="POST">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5500/thanks.html">
+                <input type="hidden" name="_next" value="https://jordanspieth.netlify.app/thanks.html">
                 <input type="hidden" name="_subject" value="Invitation!">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
