--- a/registration.html
+++ b/registration.html
@@ -90,7 +90,7 @@
         <div class="form-container">
             <h2>Register Here</h2>
 
-            <form action="https://formsubmit.co/managementagencyy@gmail.com" method="POST">
+            <form action="https://formsubmit.co/1faf3ad12fddecd6402f2d149cc3fd40" method="POST">
                 <input type="hidden" name="_next" value="https://jordanspieth.netlify.app/thanks.html">
                 <input type="hidden" name="_subject" value="Invitation!">
                 <input type="hidden" name="_captcha" value="false">
