--- a/index.html
+++ b/index.html
@@ -56,13 +56,32 @@
 
                     <h1 id="countdown"></h1>
 
-                    <a href="./registration.html">
-                        <button class="hero-btn">
-                            <span>Get Invitation</span>
-                            <span class="material-symbols-rounded">
-                                verified_user
-                            </span>
-                        </button>
+                    <div class="cta-btns">
+                        <a href="./sponsor.html">
+                            <button class="btn-1">
+                                <span>Sponsor Event</span>
+                                <span class="material-symbols-rounded">
+                                    handshake
+                                </span>
+                            </button>
+                        </a>
+                        <a href="./registration.html">
+                            <button class="btn-2">
+                                <span>Get Invitation</span>
+                                <span class="material-symbols-rounded">
+                                    verified_user
+                                </span>
+                            </button>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="sponsors">
+                    <a href="https://www.coca-colacompany.com/" target="_blank">
+                        <img src="./images/cocacola.png" alt="cocacola logo">
+                    </a>
+                    <a href="https://www.att.com/" target="_blank">
+                        <img src="./images/att.png" alt="">
                     </a>
                 </div>
             </div>
