--- a/success.html
+++ b/success.html
@@ -58,9 +58,9 @@
                 </span>
             </div>
             <div class="mid">
-                <h1>Submitted Successfully</h1>
+                <h1>Registration Successful</h1>
 
-                <p>Thank you for your love!</p> <br>
+                <p>Thank you for completing the process!</p> <br>
 
                 <p>Jordan Spieth's Party Management will promptly contact you via the E-mail you provided, to offer your selected payment option and provide additional information.</p>
             </div>
