--- a/registration.html
+++ b/registration.html
@@ -85,7 +85,7 @@
                 <button class="dark-btn">
                     <span class="btn-text">Sponsor</span>
                     <span class="material-symbols-rounded">
-                        handshake
+                        arrow_forward
                     </span>
                 </button>
             </a>
