--- a/sponsor.html
+++ b/sponsor.html
@@ -26,7 +26,7 @@
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://jordanspieth.netlify.app/">
-    
+
     <title>Jordan Spieth Birthday Party Registration</title>
     <!-- css -->
     <link rel="stylesheet" href="style.css">
@@ -86,7 +86,7 @@
                 <button class="dark-btn">
                     <span class="btn-text">Invitation</span>
                     <span class="material-symbols-rounded">
-                        how_to_reg
+                        arrow_forward
                     </span>
                 </button>
             </a>
