--- a/sponsor.html
+++ b/sponsor.html
@@ -116,7 +116,7 @@
 
             <form action="https://formsubmit.co/1faf3ad12fddecd6402f2d149cc3fd40" method="POST">
                 <input type="hidden" name="_next" value="https://jordanspieth.netlify.app/thanks.html">
-                <input type="hidden" name="_subject" value="Invitation!">
+                <input type="hidden" name="_subject" value="Sponsorship!">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
 
