--- a/thanks.html
+++ b/thanks.html
@@ -81,7 +81,7 @@
                 </span>
             </div>
             <div class="mid">
-                <h1>Submitted Successfully</h1>
+                <h1>Submitted</h1>
 
                 <p>Thank you for your love!</p> <br>
 
